[package]
name = "winlib"
version = "0.2.1"
edition = "2024"
description = "tools for creating, inspecting and modifying windows lib files"
documentation = "https://docs.rs/winlib/0.2.1/winlib"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ChrisDenton/winlibtools"

[dependencies]
ar_archive_writer = "0.4.2"

[dependencies.clap]
version = "4.5.41"
default-features = false
features = ["std", "help", "suggestions", "usage"]

[dependencies.object]
version = "0.37.1"
default-features = false
features = ["read_core", "archive", "coff", "unaligned"]

[lints.clippy]
from_str_radix_10 = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
